5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1793_1601.log
== TEST (2019-05-30 18:03:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(min)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:03:36) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:03:49) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n)


-- EXECUTION TIME:
0.419974
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:03:52) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n)


-- EXECUTION TIME:
0.464741
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:06:16) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))

n=min(v)
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:18) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))

n=min(v)
print(n)


-- EXECUTION TIME:
0.624367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(eval(input(), dtype=int))
TypeError: eval() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:22) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))

n=min(v)
print(n)


-- EXECUTION TIME:
0.351391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(eval(input(), dtype=int))
TypeError: eval() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))

n=min(v)
print(n)


-- EXECUTION TIME:
1.12486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(eval(input(), dtype=int))
TypeError: eval() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:06:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))

n=min(v)
print(n)


-- EXECUTION TIME:
1.26696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(eval(input(), dtype=int))
TypeError: eval() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa"), dtype=int))


print(min(v))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:26) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
0.471789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input()))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,10]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:27) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:30) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:33) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
0.841406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input()))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,10]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:34) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
2.25196
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input("aaaaaaaaaaaaaaaaaa")))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,10]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:34) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
2.49063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input("aaaaaaaaaaaaaaaaaa")))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,10]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:34) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
2.32385
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input("aaaaaaaaaaaaaaaaaa")))
ValueError: invalid literal for int() with base 10: '[11.32,40.2,32,10]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:34) 
-- CODE:
from numpy import*
v=array(int(input("aaaaaaaaaaaaaaaaaa")))


print(min(v))


-- EXECUTION TIME:
3.14059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 2, in <module>
    v=array(int(input("aaaaaaaaaaaaaaaaaa")))
ValueError: invalid literal for int() with base 10: '[23,2,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:26) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n,dtype=int)


-- EXECUTION TIME:
0.361408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    print(n,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:30) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n,dtype=int)


-- EXECUTION TIME:
0.534139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    print(n,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n,dtype=int)


-- EXECUTION TIME:
1.56105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    print(n,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n,dtype=int)


-- EXECUTION TIME:
1.79312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    print(n,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=min(v)
print(n,dtype=int)


-- EXECUTION TIME:
2.26986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    print(n,dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:12) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.24149
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:13) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.150512
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:13) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.178928
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:14) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.323053
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.229612
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.619547
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.581922
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.651048
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.689527
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:16) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.509195
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.607205
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.587403
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.570798
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.588016
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.568696
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:17) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.508965
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:18) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.437406
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.49645
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.49976
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.59534
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.581276
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.534257
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:20) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.446159
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:20) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.442197
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.502127
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.480725
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.624134
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.594442
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:10:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaaaaaaaaaaaaa")))

n=(min(v), dtype=int)
print(n)


-- EXECUTION TIME:
0.391107
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 4
    n=(min(v), dtype=int)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:09) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.168979
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:10) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.130377
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:10) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.269862
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:10) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.231555
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:11) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.446338
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:11) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- EXECUTION TIME:
0.483611
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))

n=min(v)
n=(v,dtype=int)
print(n)


-- ERROR:
File "XXXX", line 5
    n=(v,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:48) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v),dtype=int)
print(n)


-- EXECUTION TIME:
0.223713
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(min(v),dtype=int)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:49) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v),dtype=int)
print(n)


-- EXECUTION TIME:
0.144416
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(min(v),dtype=int)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:49) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v),dtype=int)
print(n)


-- EXECUTION TIME:
0.191918
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(min(v),dtype=int)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:13:49) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v),dtype=int)
print(n)


-- EXECUTION TIME:
0.257243
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 5
    n=(min(v),dtype=int)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:58) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v),dtype=int)
print(n)


-- ERROR:
File "XXXX", line 5
    n=(min(v),dtype=int)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v))
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:14:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v))
print(n)


-- EXECUTION TIME:
0.433392
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:02) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa"))).dtype=int


n=(min(v))
print(n)


-- EXECUTION TIME:
0.379291
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min(v))
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:05) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa"))).dtype=int


n=(min(v))
print(n)


-- EXECUTION TIME:
0.796279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min(v))
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:07) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa"))).dtype=int


n=(min(v))
print(n)


-- EXECUTION TIME:
0.609188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min(v))
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:07) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa"))).dtype=int


n=(min(v))
print(n)


-- EXECUTION TIME:
2.10977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min(v))
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:07) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa"))).dtype=int


n=(min(v))
print(n)


-- EXECUTION TIME:
2.25269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min(v))
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:49) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min(v))
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:40) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min[v])
print(n)


-- EXECUTION TIME:
0.52872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min[v])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:43) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min[v])
print(n)


-- EXECUTION TIME:
1.56627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min[v])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:44) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min[v])
print(n)


-- EXECUTION TIME:
1.59008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min[v])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:44) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=(min[v])
print(n)


-- EXECUTION TIME:
1.6535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 5, in <module>
    n=(min[v])
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:30:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=v[n]
print(w)


-- EXECUTION TIME:
0.468024
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=v[n]
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:11) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.171828
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:13) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.216672
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:14) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.235076
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:14) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.218448
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:14) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- ERROR:
File "XXXX", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.270582
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.412699
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n], dtype=int)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.562312
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:15) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n], dtype=int)
print(w)


-- EXECUTION TIME:
0.63253
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1601/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n],dtype=int)
print(w)


-- ERROR:
File "XXXX", line 6
    w=(v[n],dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n],dtype=int)
print(w)


-- EXECUTION TIME:
0.207824
-- ERROR:
  File "/home/codebench/codes/1793/1601/main.py", line 6
    w=(v[n],dtype=int)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
0.356075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:39) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
1.30799
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:40) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
1.88769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:41) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
3.83978
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:41) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
2.86552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:42) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
2.36202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:42) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
3.32686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:44) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)
w=(v[n])
print(w)


-- EXECUTION TIME:
3.23165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1601/main.py", line 6, in <module>
    w=(v[n])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:19) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:21) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
0.469901
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:22) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:23) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:24) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:25) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
0.681914
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
10.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
aaaaaaa1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:25) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:25) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:30) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
1.19955
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
aaaaaaa10.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
1.56945
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
aaaaaaa10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
10.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:31) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:33) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
2.99086
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
aaaaaaa10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:34) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
3.84799
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:35) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
4.06849
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:35) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
3.84965
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:36) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
3.58884
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
aaaaaaa1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:37) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))


n=min(v)

print(n)


-- EXECUTION TIME:
3.25844
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:16) 
-- CODE:
from numpy import*
v=array(eval(input("aaaaaaa")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
